2007-06-25  Stephen Deasey  <sdeasey@users.sf.net>

	*  nsd/config.c: An uninitialised variable was being read in a
	non-critical logging routine.

2007-06-11  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcltime.c: Silence compier warning

        make test now fails on encoding tests after last updates

2007-06-09  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/driver.c:
	* nsd/fastpath.c:
	* nsd/return.c: Use TCL_LL_MODIFIER to format Tcl_WideInt types to
	prevent warnings on certain 64bit systems.

	* include/nsthread.h:
	* nscp/nscp.c:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/config.c:
	* nsd/dns.c:
	* nsd/driver.c:
	* nsd/fastpath.c:
	* nsd/fd.c:
	* nsd/httptime.c:
	* nsd/log.c:
	* nsd/nswin32.c:
	* nsd/pidfile.c:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/sched.c:
	* nsd/sockcallback.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tcljob.c:
	* nsd/tclset.c:
	* nsd/tclsock.c:
	* nsd/tcltime.c:
	* nsdb/dbtcl.c:
	* nslog/nslog.c:
	* nsperm/nsperm.c:
	* nsproxy/nsproxylib.c:
	* nsthread/mutex.c:
	* nsthread/reentrant.c:
	* nsthread/thread.c:	
	* nsthread/winthread.c: Replace various calls to sprintf() into fixed-sized
	buffers with calls to Ns_DStringPtrintf(), direct use of Tcl objects for
	return values, or use of bounded snprintf()calls . Make sure buffer
	sizes are reasonable and have well defined lifetimes.

2007-06-07  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd-config.tcl:
	* sample-config.tcl.in: Updated config parameters
	debug into logdebug

2007-06-04  Stephen Deasey  <sdeasey@users.sf.net>

	* include/nsthread.h:
	* nsthread/thread.c:
	* nsthread/pthread.c:
	* nsthread/winthread.c:
	* nsthread/tls.c:
	* nsthread/cslock.c:
	* nsthread/nsthreadtest.c:
	* nsd/tclthread.c:
	* nsd/log.c:
	* nsd/tclinit.c: Convert Ns_ThreadId() to return a uintptr_t, that is,
	an integral type which is as long as a pointer, so that it can
	accurately hold an opaque pthread_t whether it is implemented as an