@@ -1,7 +1,12 @@
 2007-06-25  Stephen Deasey  <sdeasey@users.sf.net>
 
-	*  nsd/config.c: An uninitialised variable was being read in a
+	* nsd/config.c: An uninitialised variable was being read in a
 	non-critical logging routine.
+
+	* include/nsthread.h: Don't protect inttypes.h with an ifdef in a public
+	header as unfortunately this will never be picked up from the private
+	config.h. Explicitly include stdint.h which doesn't get dragged in by
+	other means on freebsd.
 
 2007-06-11  Vlad Seryakov  <seryakov@users.sf.net>
 
